--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ replit = "^3.2.4"
 Flask = "^2.2.0"
 discord = "^1.7.3"
 aiohttp = "^3.8.1"
+discord-pretty-help = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
