Added contacts to data and contacts call

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ bs4 = "^0.0.1"
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
 python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
+toml = "^0.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
