--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-aiohttp==3.7.4.post0
-discord.py==2.0.0
+python == >=3.8.0,<3.9"
+numpy == ^1.22.2
+replit == ^3.2.4
+Flask == ^2.2.0
+discord == ^1.7.3
+aiohttp == ^3.8.1
+discord-pretty-help == 1.3.4
